--- a/autoscaling/spike-traffic.yaml
+++ b/autoscaling/spike-traffic.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - command: ["/bin/sh"]
-        args: ["-c", "while true; do wget frontend.default:3000; done"]
+        args: ["-c", "while true; do wget frontend.ecommerce:3000; done"]
         image: busybox
         name: busybox
         resources: {}
