--- a/ecommerce-app/advertisements.yaml
+++ b/ecommerce-app/advertisements.yaml
@@ -4,7 +4,8 @@ metadata:
   labels:
     service: advertisements
     app: ecommerce
-  name: advertisements 
+  name: advertisements
+  namespace: ecommerce 
 spec:
   replicas: 1
   selector:
@@ -20,8 +21,8 @@ spec:
         app: ecommerce
     spec:
       containers:
-      - image: arapulido/ecommerce-spree-ads:latest
-        name: advertisements 
+      - image: ddtraining/advertisements-fixed:latest
+        name: advertisements
         command: ["ddtrace-run"]
         args: ["flask", "run", "--port=5002", "--host=0.0.0.0"]
         env:
@@ -36,9 +37,15 @@ spec:
                 name: db-password
           - name: POSTGRES_USER
             value: "user"
-          - name: DATADOG_SERVICE_NAME
-            value: "advertisements-service"
-          - name: DD_AGENT_HOST 
+          - name: POSTGRES_HOST
+            value: "db"
+          - name: DD_ENV
+            value: "autoscaling"
+          - name: DD_VERSION
+            value: "1.0"
+          - name: DD_SERVICE
+            value: "advertisements"
+          - name: DD_AGENT_HOST
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
@@ -46,23 +53,8 @@ spec:
             value: "true"
           - name: DD_ANALYTICS_ENABLED
             value: "true"
+          - name: DD_PROFILING_ENABLED
+            value: "true"
         ports:
         - containerPort: 5002
         resources: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    service: advertisements
-    app: ecommerce
-  name: advertisements
-spec:
-  ports:
-  - port: 5002
-    protocol: TCP
-    targetPort: 5002
-  selector:
-    service: advertisements
-    app: ecommerce
-status:
