--- a/ecommerce-app/discounts.yaml
+++ b/ecommerce-app/discounts.yaml
@@ -5,6 +5,7 @@ metadata:
     app: ecommerce
     service: discounts
   name: discounts
+  namespace: ecommerce 
 spec:
   replicas: 1
   selector:
@@ -20,7 +21,7 @@ spec:
         app: ecommerce
     spec:
       containers:
-      - image: arapulido/ecommerce-spree-discounts:latest
+      - image: ddtraining/discounts-fixed:latest
         name: discounts
         command: ["ddtrace-run"]
         args: ["flask", "run", "--port=5001", "--host=0.0.0.0"]
@@ -36,9 +37,9 @@ spec:
                 name: db-password
           - name: POSTGRES_USER
             value: "user"
-          - name: DATADOG_SERVICE_NAME
-            value: "discountsservice"
-          - name: DD_AGENT_HOST 
+          - name: POSTGRES_HOST
+            value: "db"
+          - name: DD_AGENT_HOST
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
@@ -46,24 +47,14 @@ spec:
             value: "true"
           - name: DD_ANALYTICS_ENABLED
             value: "true"
+          - name: DD_PROFILING_ENABLED
+            value: "true"
+          - name: DD_ENV
+            value: "autoscaling"
+          - name: DD_VERSION
+            value: "1.0"
+          - name: DD_SERVICE
+            value: "discounts"
         ports:
         - containerPort: 5001
         resources: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    service: discounts
-    app: ecommerce
-  name: discounts
-spec:
-  ports:
-  - port: 5001
-    protocol: TCP
-    targetPort: 5001
-  selector:
-    service: discounts
-    app: ecommerce
-  sessionAffinity: None
-  type: ClusterIP
