--- a/vertical-pod-autoscaler/admission-controller-deployment.yaml
+++ b/vertical-pod-autoscaler/admission-controller-deployment.yaml
@@ -15,9 +15,12 @@ spec:
         app: vpa-admission-controller
     spec:
       serviceAccountName: vpa-admission-controller
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534 # nobody
       containers:
         - name: admission-controller
-          image: k8s.gcr.io/vpa-admission-controller:0.6.3
+          image: k8s.gcr.io/autoscaling/vpa-admission-controller:0.10.0
           imagePullPolicy: Always
           env:
             - name: NAMESPACE
@@ -37,6 +40,8 @@ spec:
               memory: 200Mi
           ports:
             - containerPort: 8000
+            - name: prometheus
+              containerPort: 8944
       volumes:
         - name: tls-certs
           secret:
