--- a/vertical-pod-autoscaler/updater-deployment.yaml
+++ b/vertical-pod-autoscaler/updater-deployment.yaml
@@ -21,10 +21,18 @@ spec:
         app: vpa-updater
     spec:
       serviceAccountName: vpa-updater
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534 # nobody
       containers:
         - name: updater
-          image: k8s.gcr.io/vpa-updater:0.6.3
+          image: k8s.gcr.io/autoscaling/vpa-updater:0.10.0
           imagePullPolicy: Always
+          env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           resources:
             limits:
               cpu: 200m
@@ -33,4 +41,5 @@ spec:
               cpu: 50m
               memory: 500Mi
           ports:
-            - containerPort: 8080
+            - name: prometheus
+              containerPort: 8943
